<resources>
    <string name="app_name">Schulmanager</string>
    <string name="todo">TODO</string>
    <string-array name="halbjahre_array">
        <item>Halbjahr 1</item>
        <item>Halbjahr 2</item>
        <item>Halbjahr 3</item>
        <item>Halbjahr 4</item>
    </string-array>
    <string name="hint_fachname">Fachname</string>
    <string name="checkbox_abiturfach">Abiturfach</string>
    <string name="button_manage_notes">Noten verwalten</string>
    <string name="note_value_format">Wert: %.1f</string>
    <string name="note_type_format">Typ: %s</string>
    <string name="note_date_format">Datum: %s</string>
    <string name="dialog_note_title_format">Note für %s hinzufügen</string>
    <string name="hint_note_value">Punktwert (0–15)</string>
    <string name="radio_schriftlich">Schriftlich</string>
    <string name="radio_muendlich">Mündlich</string>
    <string name="radio_sonstig">Sonstig</string>
    <string name="label_current_notes">Aktuelle Noten:</string>
    <string name="fach_halbjahr_format">HJ %d</string>
    <string name="fach_avg_note_format">Ø Note: %.2f</string>
    <string name="fach_avg_punkte_format">Ø Pkt: %d</string>
    <string name="abiturprüfungsnoten">Abiturprüfungsnoten (0–15 Punkte)</string>
    <string name="pruefung1">1. Prüfung</string>
    <string name="pruefung2">2. Prüfung</string>
    <string name="pruefung3">3. Prüfung</string>
    <string name="mdlPruefung1">1. mündliche Prüfung</string>
    <string name="mdlPruefung2">2. mündliche Prüfung</string>
    <string name="save">Speichern</string>
    <string name="abi_halbjahresleistungen_format">Halbjahresleistungen: %d Punkte</string>
    <string name="abi_pruefungsleistungen_format">Prüfungsleistungen: %d Punkte</string>
    <string name="abi_gesamtpunkte_format">Gesamtpunkte: %d Punkte</string>
    <string name="abi_schnitt_format">Abiturschnitt: %s</string>
    <string name="halbjahr_schnitt_title_format">Schnitt für Halbjahr %d</string>
    <string name="halbjahr_schnitt_anzahl_faecher">Anzahl der Fächer: %d</string>
    <string name="halbjahr_schnitt_durchschnitt_punkte">Durchschnitt (Punkte): %s</string>
    <string name="halbjahr_schnitt_entspricht_note">Entspricht Note: %s</string>
    <string name="pruefungen">Prüfungen</string>
    <string name="abi_schnitt">Abi-Schnitt</string>
    <string name="hj_schnitt">HJ-Schnitt</string>
    <string name="halbjahr">Halbjahr:</string>
    <string name="hint_note_gewichtung">Gewichtung (z. B. 2.0)</string>
    <string name="gewichtung_zahl">1.0</string>
    <string name="fragment1">Noten</string>
    <string name="fragment2">Stundenplan</string>
    <string name="fragment3">Kalender</string>
    <string name="add_new_timetable_entry">Neuen Stundenplaneintrag hinzufügen</string>
    <string name="subject">Fach</string>
    <string name="uhrzeit">Uhrzeit (z.B. 08:00 - 08:45)</string>
    <string name="raum">Raum</string>
    <string name="teacher">Lehrer (optional)</string>
    <string name="stundenindex">Stundenindex (0-10)</string>
    <string name="cancel">Abbrechen</string>
    <string name="add">Hinzufügen</string>
    <string name="stunde1">08:00 - 08:45 Uhr (1. Stunde)</string>
    <string name="subject_math">Mathematik</string>
    <string name="room_a201">Raum A201</string>
    <string name="teacher_mrschmidt">Hr. Schmidt</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Di</string>
    <string name="wednesday">Mi</string>
    <string name="thursday">Do</string>
    <string name="friday">Fr</string>
    <string name="add_timetable_entry">Stundenplaneintrag hinzufügen</string>
    <string name="set_lesson_times">Stundenzeiten festlegen</string>
    <string name="year_calendar">Jahreskalender</string>
    <string name="choose_date_to_see_holiday_info">Wähle ein Datum, um Ferieninformationen zu sehen.</string>
    <string name="hint_stundeangabe">1. Stunde:</string>
    <string name="hint_zeitangabe">z.B. 08:00 - 08:45</string>
    <string name="choose_time">Uhrzeit wählen:</string>
    <string name="room">Raum</string>
</resources>
